# 3d-gaussian-splatting

./: .gitignore  CMakeLists.txt  Contexts.md  IMPLEMENTATION_PLAN.md  README.md
assets/configs/: capture_presets.txt  model_path.txt
assets/shaders/: bitonic_sort.comp  chunk_schedule.comp  composite.frag  composite.vert  depth_keys.comp  gaussian.frag  gaussian.vert  schedule_compact.comp  schedule_sort_init.comp  view_data.comp
libs/GL3Plus/: gl3w.cpp
libs/GLAD/include/glad/: glad.h  glad_egl.h  glad_glx.h  glad_wgl.h
libs/GLAD/src/: glad.c  glad_egl.c  glad_glx.c  glad_wgl.c
scripts/: run_tests.ps1  smoke_test.ps1
src/: main.cpp
src/cache/: SplatCacheFormat.h  SplatCacheReader.cpp  SplatCacheReader.h  SplatCacheWriter.cpp  SplatCacheWriter.h
src/core/: PathUtils.h  ShaderProgram.cpp  ShaderProgram.h
src/import/: GaussianScene.h  PlySceneImporter.cpp  PlySceneImporter.h
src/io/: PlyLoader.cpp  PlyLoader.h
src/render/: ChunkSchedulerPipeline.cpp  ChunkSchedulerPipeline.h  GaussianRenderer.cpp  GaussianRenderer.h  GpuSplatLayout.h  GpuSplatPacking.cpp  GpuSplatPacking.h  GpuUploadBuffers.cpp  GpuUploadBuffers.h  ScheduleCompactionPipeline.cpp  ScheduleCompactionPipeline.h  ScheduleSortInitPipeline.cpp  ScheduleSortInitPipeline.h  ViewDataPipeline.cpp  ViewDataPipeline.h
src/runtime/: RuntimeSplatAsset.h  RuntimeSplatAssetLoader.cpp  RuntimeSplatAssetLoader.h
src/scene/: Camera.cpp  Camera.h  GaussianModel.h
tests/: CMakeLists.txt.fragment  ChunkDispatchTest.cpp  ChunkSchedulerTest.cpp  README.md  TestRunner.h
tools/: run_step9_smoke.ps1
tools/gs_cache_builder/: main.cpp
